[gd_scene load_steps=5 format=2]

[ext_resource path="res://manager/card/engine/Card.gd" type="Script" id=1]
[ext_resource path="res://deck/norse/img/Rune_24.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "selected"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, -10 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "unselected"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 0 ) ]
}

[node name="Rune" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3, 0 )
texture = ExtResource( 2 )

[node name="SelectedManager" type="Control" parent="."]
margin_left = -28.0
margin_top = -44.0
margin_right = 28.0
margin_bottom = 44.0
hint_tooltip = "id"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/selected = SubResource( 1 )
anims/unselected = SubResource( 2 )

[connection signal="mouse_entered" from="SelectedManager" to="." method="_on_SelectedManager_mouse_entered"]
[connection signal="mouse_exited" from="SelectedManager" to="." method="_on_SelectedManager_mouse_exited"]
